fixed spacing issue

--- a/static/styles.css
+++ b/static/styles.css
@@ -855,6 +855,7 @@ select:hover {
 .stats {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   gap: 0.25rem;
 }
 
